<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EventoCadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblTituloEvento"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/label_titulo_evento"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                />
            <EditText
                android:id="@+id/txtTituloEvento"
                android:layout_width="match_parent"
                android:maxLength="50"
                android:layout_height="30dp"
                android:textAlignment="textEnd"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/borda_text"
                android:layout_marginRight="5dp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblDescricaoEvento"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/label_descricao_evento"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                />
            <EditText
                android:id="@+id/txtDescricaoEvento"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:maxLength="150"
                android:textAlignment="textEnd"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/borda_text"
                android:layout_marginRight="5dp"
                android:gravity="end" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblDataEvento"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/label_data_evento"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                />
            <EditText
                android:id="@+id/txtDataEvento"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:inputType="date"
                android:enabled="false"
                android:textAlignment="textEnd"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/borda_text"
                android:layout_marginRight="5dp"
                android:gravity="end" />
            <ImageButton
                android:id="@+id/btn_calendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="6dp"
                android:elevation="4dp"
                android:src="@drawable/ic_calendar" />

        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lblVagasEvento"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/label_vagas_evento"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            />
        <EditText
            android:id="@+id/txtVagasEvento"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/borda_text"
            android:layout_marginRight="5dp"
            android:gravity="end" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblPalestranteEvento"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:text="@string/label_palestrante_evento"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                />

            <Spinner
                android:id="@+id/spn_palestrante"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>